# geometry

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt
configured_files/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt
src/examples/: Laplacian.cpp
src/include/DG/: CMakeLists.txt  Core.h  Types.h
